添加测试代码

--- a/YfK2Pagent/src/main/AndroidManifest.xml
+++ b/YfK2Pagent/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest package="com.yunfan.k2pagent"
+<manifest package="com.yunfan.pagent"
 
           xmlns:android="http://schemas.android.com/apk/res/android"
 >
