添加vr、player、encoder、auth、link库

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':myapplication', ':YfK2Pagent', ':YfFilter'
+include ':myapplication', ':YfK2Pagent', ':YfFilter', ':YfAuthentication', ':YfMediaPlayer', ':YfEncoderKit', ':YfVr', ':YfLinkKit'
