--- a/FFMpeg-decoder-encoder-https/src/main/AndroidManifest.xml
+++ b/FFMpeg-decoder-encoder-https/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 >
 
     <application android:allowBackup="true"
-                 android:label="@string/app_name"
+                 android:label="ffmpeg_decoder_encoder_https"
                  android:supportsRtl="true"
     >
 
