--- a/MuxerLib-editor/src/main/AndroidManifest.xml
+++ b/MuxerLib-editor/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 >
 
     <application android:allowBackup="true"
-                 android:label="@string/app_name"
+                 android:label="muxer_editor"
                  android:supportsRtl="true"
     >
 
