--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Sep 18 15:42:22 CST 2017
-ndk.dir=D\:\\android\\sdk\\ndk-bundle
-sdk.dir=D\:\\android\\sdk
+#Mon Oct 16 17:39:25 GMT+08:00 2017
+ndk.dir=C\:\\Users\\37917\\AppData\\Local\\Android\\Sdk\\ndk-bundle
+sdk.dir=C\:\\Users\\37917\\AppData\\Local\\Android\\Sdk
